OpenSLP Change Log
------------------

Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================
12/08/00 mpeterson@caldera.com
Fixed DA / SA lookup code in libslp.  Fixes infinate loop under certain
error producing situations 

12/08/00 mpeterson@caldera.com
Fixed errorcode stomping in slpd and libslp.  Now appropriate message should
get passed to the API caller

12/08/00 rganesan@myrealbox.com
Second set of 64-bit cleanups - removed converted all size_t datatypes to
int to be consistent with the rest of the code.

12/07/00 rganesan@myrealbox.com
Changed AC_OPENSLP_* macros to OPENSLP_* macros as per recommentation in
the Goat book (autoconf/automake/libtool book by the authors).

12/06/00 mpeterson@caldera.com
Fixed bug where certain services were being omitted from a SrvTypeRply

12/06/00 rganesan@myrealbox.com
64-bit cleanups - change timestamps and signatures to int instead of long.

12/06/00 rganesan@myrealbox.com
Changed v1ProcessDASrvRqst to use SLPDAEntry. Added passive DAAdverts
for SLPv1.
	
*** TAG OpenSLP 0.8.0 ****

11/30/00 mpeterson@caldera.com
Changed license comments in all source files

11/28/00 mpeterson@caldera.com
More efficient rewrite of code that selects a DA to satisfy API requests

11/28/00 mpeterson@caldera.com
Implemented SLPFindScopes() in libslp

11/21/00 mpeterson@caldera.com
Send dead DAAdvert as part of graceful shutdown

11/21/00 mpeterson@caldera.com
DAs now echo local registrations to other DAs (slpd as a DA also acts like
an SA for local API callers)

11/20/00 mpeterson@caldera.com
Added code to ensure we respond correctly (with AUTHENICATION_UNKNONW) when\
a request with a SPI is received

11/16/00 mpeterson@caldera.com